update docs and change health return type
